--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "secure-password"
-version = "0.2.0"
+version = "0.2.1-alpha.0"
 license = "MIT OR Apache-2.0"
 description = "Safe password hashing"
 documentation = "https://docs.rs/secure-password"
