--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: rust
-rust:
-  - nightly
-
-before_script: |
-  rustup component add rustfmt-preview &&
-  cargo install clippy -f
-script: |
-  cargo fmt -- --write-mode=diff &&
-  cargo clippy -- -D clippy &&
-  cargo build --verbose &&
-  cargo test  --verbose
 cache: cargo
+rust: stable
+
+before_script:
+  - rustup component add rustfmt-preview
+  - rustup component add clippy-preview
+  - cargo fmt --version
+  - cargo clippy --version
+
+script:
+  - cargo fmt -- --check
+  - cargo build --verbose
+  - cargo test  --verbose
+  - cargo clippy
